# viabilidad-negocios

./: .env.example  .gitignore  Dockerfile  admin_app.py  docker-compose.prod.yml  docker-compose.yml  ingest_all_states.py  pyproject.toml  requirements.txt  run_local.ps1  run_local.sh
.kiro/specs/viabilidad-comercial/: design.md  requirements.md  rfc-template.md  rfc-viabilidad-comercial.md  tasks.md
app/: analytics.py  auth.py  bedrock.py  besttime.py  config.py  database.py  google_places.py  main.py  middleware.py  models.py  payments.py  reports.py  routes_analytics.py  schemas.py  tasks.py
frontend/: app.js  index.css  index.html
scratch/: add_email_column.py  test_pdf.py
tests/: test_suite.py
