[project]
name = "viabilidad-hook-admin"
version = "0.1.0"
description = "Consola Administrativa de Ingesta y Dashboard de GeoViabilidad Hook"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "fiona>=1.9.0",
    "pyproj>=3.5.0",
    "shapely>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
