[project]
name = "viabilidad-hook-admin"
version = "0.1.0"
description = "Consola Administrativa de Ingesta y Dashboard de GeoViabilidad Hook"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "fiona>=1.9.0",
    "pyproj>=3.5.0",
    "shapely>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "reportlab>=4.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]
